# GDA-Project

./: .gitignore  README.md  background.ipynb  notes.ipynb  notes.md  pyproject.toml  test.py
data/: bench_all_methods.csv  bench_nystrom.csv  download.sh  higgs.py  mini_higgs.py
jobs/: FalkonGPU.batch  Fallkon.sh  GPytorch.batch  MDS_benchmark.batch  MDS_grid_seach.batch  Nystrom.sh
logs/: FalkonGPU.out  GPytorch.out  MDS.err  MDS.out  grid_search.out  test.err  test.out
notebooks/: 1.background.ipynb  2. Methods.ipynb  3. Experiments.ipynb  HIGS.ipynb  MSD.ipynb  background.ipynb  experiment_reproducing.ipynb  higgs.ipynb  test.ipynb
outputs/: FalkonGPU_MDS_7_2e-06_1000.csv  FalkonGPU_MDS_7_2e-06_10000.csv  Falkon_MDS_7.0_2e-06_1000.csv  MDS_FalkonGPU.csv  MDS_SVGP.csv  MDS_benchmark_all_methods.csv  Nystrom_MDS_7.0_2e-06_1000.csv  bench_falkon.csv  bench_vanilla.csv  condition_benchmark.csv  falkon_gpu_best_model.csv  falkon_gpu_grid_results.csv  nystrom_error_scaling.csv
outputs/HIGGS/: FalkonGPU_3.8_3e-08_logMs.csv  Falkon_3.8_3e-08_logMs.csv  GPytorch_7.0_2e-06_logMs.csv  Nystrom_3.8_3e-08_logMs.csv
outputs/MSD/: FalkonGPU_7.0_1e-08_logMs.csv
outputs/mini_Higgs/: FalkonGPU_3.8_3e-08_logMs.csv  Falkon_3.8_3e-08_logMs.csv  GPytorch_7.0_2e-06_logMs.csv  (+1 more)
report/: acmart.bib  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  notes.md
scripts/: approximation_benchmark.py  benchmark.py  benchmark_logm.py  condition_benchmark.py  kernel_solvers.py  math_asymptotes.py  mds_benchmark.py  time_benchmarking.py
(+12 files in other folders)
