[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "torch==2.4.0",
    "tqdm>=4.67.1",
]
