[project]
name = "KMTR"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "falkon",
    "gpytorch>=1.13",
    "h5py>=3.14.0",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "torch==2.4.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
falkon = { git = "https://github.com/falkonml/falkon.git" }

[tool.uv.extra-build-dependencies]
falkon = [{ requirement = "torch", match-runtime = true }]
